force-app/main/default/objects/Interview_Process__c/Interview_Process__c.object-meta.xml
<CustomObject>
    <description>Join object for interview and questions</description>
    <label>Interview Process</label>
    <nameField>
        <displayFormat>IP{000}</displayFormat>
        <label>Interviewer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>