force-app/main/default/objects/Interview_Process__c/fields/Interview_Question__c.field-meta.xml
<CustomField>
    <fullName>Interview_Question__c</fullName>
    <label>Interview Question</label>
    <referenceTo>Interview_Question__c</referenceTo>
    <relationshipLabel>Interview Process</relationshipLabel>
    <relationshipName>Interview_Process</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>