force-app/main/default/objects/Interview_Process__c/fields/Interviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Notes__c</fullName>
    <label>Interviewer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>